# refactoring_database_web_ui_server_side_rendering

./: .gitignore  Cargo.toml  README.md  cache53.txt  subtitles.txt  temp53.txt
automation_tasks_rs/: Cargo.toml
automation_tasks_rs/src/: main.rs
db_backup/: backup_and_restore.md  webpage_hit_counter.tar
images/: FullStackRust.pdn
tier2_web_server_actix_postgres/: Cargo.toml
tier2_web_server_actix_postgres/src/: actix_mod.rs  app_state_mod.rs  deadpool_mod.rs  error_mod.rs  html_templating_mod.rs  lib.rs  postgres_mod.rs  postgres_type_mod.rs  server_side_multi_row_mod.rs  server_side_single_row_mod.rs  web_params_mod.rs  webpage_hits_mod.rs
tier3_database_postgres/: fn_random_between.sql  fn_webpage_hits_delete.sql  fn_webpage_hits_insert.sql  fn_webpage_hits_new.sql  fn_webpage_hits_read.sql  fn_webpage_hits_update.sql  sql_util_for_webpage_hits.sql  tb_hit_counter.sql  tb_webpage.sql
tier3_database_postgres/init/: create_database.sql  tb_hit_counter.sql
tier3_database_postgres/system_wide_objects/: fn_drop_func.sql  vw_get_function_input_params.sql  vw_get_view_fields.sql
tier3_database_postgres/test_data_and functions/: fn_test1.sql  insert_test_data.sql  sql_util_for_webpage_hits.sql
tier3_database_postgres/webpage_hits/: fn_webpage_hits_delete.sql  fn_webpage_hits_edit.sql  fn_webpage_hits_show.sql  vw_webpage_hits.sql  vw_webpage_hits_list.sql
tmp/: temp52.txt
web_server_folder/webpage_hits_admin/css/: webpage_hits_admin.css
web_server_folder/webpage_hits_admin/test/: testing_microxml_example.html
web_server_folder/webpage_hits_admin/webpage_hits/: webpage_hits_delete.html  webpage_hits_edit.html  webpage_hits_insert.html  (+4 more)
